fixed header logo not being above carrousel on mobile

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,7 +7,7 @@
   max-width: 100vw;
   // min-width: 320px;
   width: 100%;
-  z-index: 4;
+  z-index: 5;
 
   .mobile {
     padding-top: 64px;
@@ -17,6 +17,7 @@
     display: flex;
     align-items: center;
     position: relative;
+    z-index: 2;
 
     .navButton {
       position: fixed;
